crates/bc-cli/tests/cli/snapshots/cli__help__stub_commands@plugin_list.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No plugins installed.
----- stderr -----
