crates/bc-cli/tests/cli/snapshots/cli__help__subcommand_help@account.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Manage accounts

Usage: borrow-checker account [OPTIONS] <COMMAND>

Commands:
  list           List all active accounts
  create         Create an account from a colon-path, minting any missing ancestors
  archive        Archive an account (hides it from active lists; data is preserved)
  close          Close an account on a business date (does not hide it from lists)
  reopen         Reopen a closed account
  set-opened-on  Set or clear an account's declared opening date
  balance        List account balances (default commodity) in a table
  help           Print this message or the help of the given subcommand(s)

Options:
      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')
----- stderr -----
