crates/bc-cli/tests/cli/snapshots/cli__help__subcommand_help@budget.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Manage budgets

Usage: borrow-checker budget [OPTIONS] <COMMAND>

Commands:
  list     List all active budgets
  create   Create a new budget anchored to an account
  archive  Archive a budget (hides it; data is preserved)
  status   Show budget status for all active budgets
  update   Update a budget's name, target, or rollover policy
  help     Print this message or the help of the given subcommand(s)

Options:
      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')
----- stderr -----
