crates/bc-cli/tests/cli/snapshots/cli__help__subcommand_help@export.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Export all accounts and transactions to a file or stdout

Usage: borrow-checker export [OPTIONS] --format <FORMAT>

Options:
      --format <FORMAT>
          Output format (e.g. `ledger`, `beancount`). Must match a loaded exporter plugin name

      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

  -o, --output <OUTPUT>
          Path to write the output file. Omit to write to stdout

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')
----- stderr -----
