crates/bc-cli/tests/cli/snapshots/cli__help__subcommand_help@meta.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Manage the metadata key registry

Usage: borrow-checker meta [OPTIONS] <COMMAND>

Commands:
  register  Register a key with an explicit type, before any value is written
  list      List every registered key with its type
  retype    Change a key's type, refitting every entry stored under it
  rename    Rename a key, carrying every entry under it across
  delete    Delete a key, and with `--force` every entry stored under it
  help      Print this message or the help of the given subcommand(s)

Options:
      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')
----- stderr -----
