crates/bc-cli/tests/cli/snapshots/cli__help__subcommand_help@sync.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Run one import profile or every profile through the shared engine

Usage: borrow-checker sync [OPTIONS] <--profile <NAME>|--all>

Options:
      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --profile <NAME>
          Run one profile, by name

      --all
          Run every profile, in name order

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

      --dry-run
          Report what each profile would do, without writing anything.

          Takes no snapshot and opens no batch. Exits non-zero when any profile has a blocker — an unresolved account, an unresolved commodity, or a posting skipped for any other cause — so a script can gate on it.

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')
----- stderr -----
